{
  "version": 4,
  "terraform_version": "1.7.3",
  "serial": 767,
  "lineage": "3fd48625-70de-059e-c141-53bf37a1a7b0",
  "resources": [
    {
      "module": "module.bastion_a",
      "mode": "managed",
      "type": "aws_instance",
      "name": "roland_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f634594a95cadb9a",
            "arn": "arn:aws:ec2:eu-west-3:564306352142:instance/i-07f58538bcb156243",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07f58538bcb156243",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "roland_keypair_545454",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-081821a345f019b81",
            "private_dns": "ip-10-0-137-79.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.137.79",
            "public_dns": "ec2-15-236-201-70.eu-west-3.compute.amazonaws.com",
            "public_ip": "15.236.201.70",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e3fbbb22e593340f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0dfd51d10a9d06e44",
            "tags": {
              "Name": "roland-bastion"
            },
            "tags_all": {
              "Name": "roland-bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f24bc180521f54ff"
            ]
          },
          "dependencies": [
            "module.bastion_a.aws_key_pair.myec2key",
            "module.bastion_a.data.aws_ami.roland-ami",
            "module.networking.aws_subnet.public_subnet_a",
            "module.networking.aws_vpc.roland_vpc",
            "module.security.aws_security_group.sg_22"
          ]
        }
      ]
    },
    {
      "module": "module.bastion_b",
      "mode": "managed",
      "type": "aws_instance",
      "name": "roland_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f634594a95cadb9a",
            "arn": "arn:aws:ec2:eu-west-3:564306352142:instance/i-02a11967de57dd28e",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02a11967de57dd28e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "roland_keypair_5445346",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a6897fe7a3c46b42",
            "private_dns": "ip-10-0-153-176.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.153.176",
            "public_dns": "ec2-13-38-108-77.eu-west-3.compute.amazonaws.com",
            "public_ip": "13.38.108.77",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0412010b99af90024",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0da01b4a6edca9aad",
            "tags": {
              "Name": "roland-bastion"
            },
            "tags_all": {
              "Name": "roland-bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f24bc180521f54ff"
            ]
          },
          "dependencies": [
            "module.bastion_b.aws_key_pair.myec2key",
            "module.bastion_b.data.aws_ami.roland-ami",
            "module.networking.aws_subnet.public_subnet_b",
            "module.networking.aws_vpc.roland_vpc",
            "module.security.aws_security_group.sg_22"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "roland_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f634594a95cadb9a",
            "arn": "arn:aws:ec2:eu-west-3:564306352142:instance/i-0993c1e8f63e3ceea",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-3b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0993c1e8f63e3ceea",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "roland_keypair_4049",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-010f27d5049344b8e",
            "private_dns": "ip-10-0-6-144.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.6.144",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a34e2c19f79c1919",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-034135d23679a562b",
            "tags": {
              "Name": "roland-a"
            },
            "tags_all": {
              "Name": "roland-a"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-052aef9a6b269ee31"
            ]
          },
          "dependencies": [
            "module.ec2.aws_key_pair.myec2key",
            "module.ec2.data.aws_ami.roland-ami",
            "module.networking.aws_subnet.app_subnet_a",
            "module.networking.aws_subnet.app_subnet_b",
            "module.networking.aws_vpc.roland_vpc",
            "module.security.aws_security_group.sg_roland"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "roland_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f634594a95cadb9a",
            "arn": "arn:aws:ec2:eu-west-3:564306352142:instance/i-031d05510de3515e5",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-3b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-031d05510de3515e5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "roland_keypair_4049",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0103cfee2e84d19a3",
            "private_dns": "ip-10-0-56-220.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.56.220",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-055068320bfffbaa6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07675fbc0540604ca",
            "tags": {
              "Name": "roland-b"
            },
            "tags_all": {
              "Name": "roland-b"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-052aef9a6b269ee31"
            ]
          },
          "dependencies": [
            "module.ec2.aws_key_pair.myec2key",
            "module.ec2.data.aws_ami.roland-ami",
            "module.networking.aws_subnet.app_subnet_a",
            "module.networking.aws_subnet.app_subnet_b",
            "module.networking.aws_vpc.roland_vpc",
            "module.security.aws_security_group.sg_roland"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "roland_tg_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-3:564306352142:targetgroup/tf-roland-lb-tg/88f57be8d2b33e2c-2024022608523037530000000e",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-3:564306352142:targetgroup/tf-roland-lb-tg/88f57be8d2b33e2c",
            "target_id": "i-0993c1e8f63e3ceea"
          },
          "dependencies": [
            "module.ec2.aws_instance.roland_a",
            "module.ec2.aws_key_pair.myec2key",
            "module.ec2.data.aws_ami.roland-ami",
            "module.load_balancing.aws_lb_target_group.roland_vms",
            "module.networking.aws_subnet.app_subnet_a",
            "module.networking.aws_subnet.app_subnet_b",
            "module.networking.aws_vpc.roland_vpc",
            "module.security.aws_security_group.sg_roland"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "roland_tg_attachment_B",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-3:564306352142:targetgroup/tf-roland-lb-tg-B/1018164bf48ba5f6-2024022608523048360000000f",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-3:564306352142:targetgroup/tf-roland-lb-tg-B/1018164bf48ba5f6",
            "target_id": "i-031d05510de3515e5"
          },
          "dependencies": [
            "module.ec2.aws_instance.roland_b",
            "module.ec2.aws_key_pair.myec2key",
            "module.ec2.data.aws_ami.roland-ami",
            "module.load_balancing.aws_lb_target_group.roland_vms_B",
            "module.networking.aws_subnet.app_subnet_a",
            "module.networking.aws_subnet.app_subnet_b",
            "module.networking.aws_vpc.roland_vpc",
            "module.security.aws_security_group.sg_roland"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancing",
      "mode": "managed",
      "type": "aws_lb",
      "name": "lb_roland",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:564306352142:loadbalancer/app/roland-alb/0da6063d2532ce5a",
            "arn_suffix": "app/roland-alb/0da6063d2532ce5a",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "roland-alb-1309424114.eu-west-3.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-3:564306352142:loadbalancer/app/roland-alb/0da6063d2532ce5a",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "roland-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-033d51f6c40a49a35"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0da01b4a6edca9aad"
              },
              {
                "subnet_id": "subnet-0dfd51d10a9d06e44"
              }
            ],
            "subnets": [
              "subnet-0da01b4a6edca9aad",
              "subnet-0dfd51d10a9d06e44"
            ],
            "vpc_id": "vpc-072c8356b45c11803",
            "xff_header_processing_mode": "append",
            "zone_id": "Z3Q77PNBQS71R4"
          },
          "dependencies": [
            "module.networking.aws_subnet.public_subnet_a",
            "module.networking.aws_subnet.public_subnet_b",
            "module.networking.aws_vpc.roland_vpc",
            "module.security.aws_security_group.sg_application_lb"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancing",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:564306352142:listener/app/roland-alb/0da6063d2532ce5a/6b4e72ab151b0782",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-3:564306352142:targetgroup/tf-roland-lb-tg/88f57be8d2b33e2c",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:564306352142:listener/app/roland-alb/0da6063d2532ce5a/6b4e72ab151b0782",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-3:564306352142:loadbalancer/app/roland-alb/0da6063d2532ce5a",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.load_balancing.aws_lb.lb_roland",
            "module.load_balancing.aws_lb_target_group.roland_vms",
            "module.networking.aws_subnet.public_subnet_a",
            "module.networking.aws_subnet.public_subnet_b",
            "module.networking.aws_vpc.roland_vpc",
            "module.security.aws_security_group.sg_application_lb"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancing",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "roland_vms",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:564306352142:targetgroup/tf-roland-lb-tg/88f57be8d2b33e2c",
            "arn_suffix": "targetgroup/tf-roland-lb-tg/88f57be8d2b33e2c",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:564306352142:targetgroup/tf-roland-lb-tg/88f57be8d2b33e2c",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tf-roland-lb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-072c8356b45c11803"
          },
          "dependencies": [
            "module.networking.aws_vpc.roland_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancing",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "roland_vms_B",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:564306352142:targetgroup/tf-roland-lb-tg-B/1018164bf48ba5f6",
            "arn_suffix": "targetgroup/tf-roland-lb-tg-B/1018164bf48ba5f6",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:564306352142:targetgroup/tf-roland-lb-tg-B/1018164bf48ba5f6",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tf-roland-lb-tg-B",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-072c8356b45c11803"
          },
          "dependencies": [
            "module.networking.aws_vpc.roland_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ebda4de029a071c2",
            "domain": "vpc",
            "id": "eipalloc-0ebda4de029a071c2",
            "network_border_group": "eu-west-3",
            "public_dns": "ec2-35-181-85-149.eu-west-3.compute.amazonaws.com",
            "public_ip": "35.181.85.149",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00ea24dbc9e1a0576",
            "domain": "vpc",
            "id": "eipalloc-00ea24dbc9e1a0576",
            "network_border_group": "eu-west-3",
            "public_dns": "ec2-13-36-85-90.eu-west-3.compute.amazonaws.com",
            "public_ip": "13.36.85.90",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "roland_igateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:564306352142:internet-gateway/igw-0b844c337801ee3af",
            "id": "igw-0b844c337801ee3af",
            "owner_id": "564306352142",
            "tags": {
              "Name": "roland-igateway"
            },
            "tags_all": {
              "Name": "roland-igateway"
            },
            "vpc_id": "vpc-072c8356b45c11803"
          },
          "dependencies": [
            "module.networking.aws_vpc.roland_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "gw_public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ebda4de029a071c2",
            "association_id": "eipassoc-0353e89a6f99abedb",
            "connectivity_type": "public",
            "id": "nat-0bcdee5861617a630",
            "network_interface_id": "eni-0587a52ea6e0ce20b",
            "private_ip": "10.0.129.187",
            "public_ip": "35.181.85.149",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0dfd51d10a9d06e44",
            "tags": {
              "Name": "roland-nat-public-a"
            },
            "tags_all": {
              "Name": "roland-nat-public-a"
            }
          },
          "dependencies": [
            "module.networking.aws_eip.eip_public_a",
            "module.networking.aws_subnet.public_subnet_a",
            "module.networking.aws_vpc.roland_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "gw_public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00ea24dbc9e1a0576",
            "association_id": "eipassoc-0ac852ab71625576f",
            "connectivity_type": "public",
            "id": "nat-0b1a1f13632c6eeff",
            "network_interface_id": "eni-0afc0a068e456c7c8",
            "private_ip": "10.0.147.75",
            "public_ip": "13.36.85.90",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0da01b4a6edca9aad",
            "tags": {
              "Name": "roland-nat-public-b"
            },
            "tags_all": {
              "Name": "roland-nat-public-b"
            }
          },
          "dependencies": [
            "module.networking.aws_eip.eip_public_b",
            "module.networking.aws_subnet.public_subnet_b",
            "module.networking.aws_vpc.roland_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route",
      "name": "route_appa_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-04c1019b8895760921080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0bcdee5861617a630",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04c1019b889576092",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_eip.eip_public_a",
            "module.networking.aws_nat_gateway.gw_public_a",
            "module.networking.aws_route_table.rtb_appa",
            "module.networking.aws_subnet.public_subnet_a",
            "module.networking.aws_vpc.roland_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route",
      "name": "route_appb_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0ef039eaef0aaccfe1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0b1a1f13632c6eeff",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ef039eaef0aaccfe",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_eip.eip_public_b",
            "module.networking.aws_nat_gateway.gw_public_b",
            "module.networking.aws_route_table.rtb_appb",
            "module.networking.aws_subnet.public_subnet_b",
            "module.networking.aws_vpc.roland_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route",
      "name": "route_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0b844c337801ee3af",
            "id": "r-rtb-0b801f4a79d89248b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b801f4a79d89248b",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_internet_gateway.roland_igateway",
            "module.networking.aws_route_table.rtb_public",
            "module.networking.aws_vpc.roland_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb_appa",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:564306352142:route-table/rtb-04c1019b889576092",
            "id": "rtb-04c1019b889576092",
            "owner_id": "564306352142",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "roland-appa-routetable"
            },
            "tags_all": {
              "Name": "roland-appa-routetable"
            },
            "timeouts": null,
            "vpc_id": "vpc-072c8356b45c11803"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.roland_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb_appb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:564306352142:route-table/rtb-0ef039eaef0aaccfe",
            "id": "rtb-0ef039eaef0aaccfe",
            "owner_id": "564306352142",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "roland-appb-routetable"
            },
            "tags_all": {
              "Name": "roland-appb-routetable"
            },
            "timeouts": null,
            "vpc_id": "vpc-072c8356b45c11803"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.roland_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:564306352142:route-table/rtb-0b801f4a79d89248b",
            "id": "rtb-0b801f4a79d89248b",
            "owner_id": "564306352142",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "roland-public-routetable"
            },
            "tags_all": {
              "Name": "roland-public-routetable"
            },
            "timeouts": null,
            "vpc_id": "vpc-072c8356b45c11803"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.roland_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta_subnet_association_appa",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d54cbf45d47a1cb7",
            "route_table_id": "rtb-04c1019b889576092",
            "subnet_id": "subnet-034135d23679a562b"
          },
          "dependencies": [
            "module.networking.aws_route_table.rtb_appa",
            "module.networking.aws_subnet.app_subnet_a",
            "module.networking.aws_vpc.roland_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta_subnet_association_appb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-004c29789f8834c08",
            "route_table_id": "rtb-0ef039eaef0aaccfe",
            "subnet_id": "subnet-07675fbc0540604ca"
          },
          "dependencies": [
            "module.networking.aws_route_table.rtb_appb",
            "module.networking.aws_subnet.app_subnet_b",
            "module.networking.aws_vpc.roland_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta_subnet_association_puba",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-092e5030c15facce7",
            "route_table_id": "rtb-0b801f4a79d89248b",
            "subnet_id": "subnet-0dfd51d10a9d06e44"
          },
          "dependencies": [
            "module.networking.aws_route_table.rtb_public",
            "module.networking.aws_subnet.public_subnet_a",
            "module.networking.aws_vpc.roland_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta_subnet_association_pubb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03e97006283487ae0",
            "route_table_id": "rtb-0b801f4a79d89248b",
            "subnet_id": "subnet-0da01b4a6edca9aad"
          },
          "dependencies": [
            "module.networking.aws_route_table.rtb_public",
            "module.networking.aws_subnet.public_subnet_b",
            "module.networking.aws_vpc.roland_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:564306352142:subnet/subnet-034135d23679a562b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.0.0.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-034135d23679a562b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "564306352142",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "var.environment",
              "Name": "app-a"
            },
            "tags_all": {
              "Environment": "var.environment",
              "Name": "app-a"
            },
            "vpc_id": "vpc-072c8356b45c11803"
          },
          "dependencies": [
            "module.networking.aws_vpc.roland_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:564306352142:subnet/subnet-07675fbc0540604ca",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.0.32.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07675fbc0540604ca",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "564306352142",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "var.environment",
              "Name": "app-b"
            },
            "tags_all": {
              "Environment": "var.environment",
              "Name": "app-b"
            },
            "vpc_id": "vpc-072c8356b45c11803"
          },
          "dependencies": [
            "module.networking.aws_vpc.roland_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:564306352142:subnet/subnet-0dfd51d10a9d06e44",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.128.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dfd51d10a9d06e44",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "564306352142",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "var.environment",
              "Name": "public-a"
            },
            "tags_all": {
              "Environment": "var.environment",
              "Name": "public-a"
            },
            "vpc_id": "vpc-072c8356b45c11803"
          },
          "dependencies": [
            "module.networking.aws_vpc.roland_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:564306352142:subnet/subnet-0da01b4a6edca9aad",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.0.144.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0da01b4a6edca9aad",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "564306352142",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "var.environment",
              "Name": "public-b"
            },
            "tags_all": {
              "Environment": "var.environment",
              "Name": "public-b"
            },
            "vpc_id": "vpc-072c8356b45c11803"
          },
          "dependencies": [
            "module.networking.aws_vpc.roland_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "roland_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:564306352142:vpc/vpc-072c8356b45c11803",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-001051cf812c7c5bc",
            "default_route_table_id": "rtb-0e393f20ae95f5d48",
            "default_security_group_id": "sg-0bf7032cd8af43d36",
            "dhcp_options_id": "dopt-0353008e175def928",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-072c8356b45c11803",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e393f20ae95f5d48",
            "owner_id": "564306352142",
            "tags": {
              "Name": "roland-vpc"
            },
            "tags_all": {
              "Name": "roland-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "rolan_public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:564306352142:network-acl/acl-00970c4ae2fb2bebb",
            "egress": [],
            "id": "acl-00970c4ae2fb2bebb",
            "ingress": [],
            "owner_id": "564306352142",
            "subnet_ids": [
              "subnet-0dfd51d10a9d06e44"
            ],
            "tags": {
              "Name": "acl-roland-public-a"
            },
            "tags_all": {
              "Name": "acl-roland-public-a"
            },
            "vpc_id": "vpc-072c8356b45c11803"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_subnet.public_subnet_a",
            "module.networking.aws_subnet.public_subnet_b",
            "module.networking.aws_vpc.roland_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "rolan_public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:564306352142:network-acl/acl-02f3ad4657daa6a22",
            "egress": [],
            "id": "acl-02f3ad4657daa6a22",
            "ingress": [],
            "owner_id": "564306352142",
            "subnet_ids": [
              "subnet-0da01b4a6edca9aad"
            ],
            "tags": {
              "Name": "acl-roland-public-b"
            },
            "tags_all": {
              "Name": "acl-roland-public-b"
            },
            "vpc_id": "vpc-072c8356b45c11803"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_subnet.public_subnet_a",
            "module.networking.aws_subnet.public_subnet_b",
            "module.networking.aws_vpc.roland_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "nat_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3451722811",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-00970c4ae2fb2bebb",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 200,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_subnet.public_subnet_a",
            "module.networking.aws_subnet.public_subnet_b",
            "module.networking.aws_vpc.roland_vpc",
            "module.security.aws_network_acl.rolan_public_a"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "nat_inboundb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-980240936",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-02f3ad4657daa6a22",
            "protocol": "-1",
            "rule_action": "allow",
            "rule_number": 200,
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_subnet.public_subnet_a",
            "module.networking.aws_subnet.public_subnet_b",
            "module.networking.aws_vpc.roland_vpc",
            "module.security.aws_network_acl.rolan_public_b"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_22",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:564306352142:security-group/sg-0f24bc180521f54ff",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f24bc180521f54ff",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sg_22",
            "name_prefix": "",
            "owner_id": "564306352142",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg-22"
            },
            "tags_all": {
              "Name": "sg-22"
            },
            "timeouts": null,
            "vpc_id": "vpc-072c8356b45c11803"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.roland_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_application_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:564306352142:security-group/sg-033d51f6c40a49a35",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-033d51f6c40a49a35",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sg_application_lb",
            "name_prefix": "",
            "owner_id": "564306352142",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "roland-alb"
            },
            "tags_all": {
              "Name": "roland-alb"
            },
            "timeouts": null,
            "vpc_id": "vpc-072c8356b45c11803"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.roland_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_roland",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:564306352142:security-group/sg-052aef9a6b269ee31",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-052aef9a6b269ee31",
            "ingress": [],
            "name": "sg_roland",
            "name_prefix": "",
            "owner_id": "564306352142",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg-roland"
            },
            "tags_all": {
              "Name": "sg-roland"
            },
            "timeouts": null,
            "vpc_id": "vpc-072c8356b45c11803"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.roland_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.1.0.0/24"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-1832982892",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-052aef9a6b269ee31",
            "security_group_rule_id": "sgr-0ff10fd7db4c75921",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.roland_vpc",
            "module.security.aws_security_group.sg_roland"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "outbound_allow_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-2392816094",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-052aef9a6b269ee31",
            "security_group_rule_id": "sgr-0d64188c118c73b26",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.roland_vpc",
            "module.security.aws_security_group.sg_roland"
          ]
        }
      ]
    }
  ]
}